--- a/ReadMe.org
+++ b/ReadMe.org
@@ -74,7 +74,7 @@ Easy as pi!
 *** There are plenty of other easy and powerful ways to do those things. What makes this different?
 1) Normally, when you modify a REST API, unless each endpoint is it's own process, you have to redeploy the entire API or service. With Dataworks you can hot swap endpoints in a running application, without effecting any other endpoints on your service. You can add new functionality, without effecting any of the old functionality. It takes much of the complexity of continuous deployment out of the equation. When you modify, add, or delete code on one instance, the changes propagate to all the nodes. Which means deployment is essentially only ever done on upgrades of dataworks itself, and the rest is just updating data in a business application.
 2) You can use transducers on kafka topics as though they were clojure.core.async channels. If you're a clojurian, then you probably already have a feeling of how powerful that is. If not, then just think about it as being able to do stream processing with a very powerful programming language and next-to-no configuration.
-3) Your db, stream processing, and web api are seamlessly integrated, and are themselves just clojure functions. Dataworks ships with [[https://opencrux.com/][openCRUX]] for it's database, meaning that your dataworks node is also a node of your database, and your database is always close at hand. It's also fairly easy to use some other database if you like. 
+3) Your db, stream processing, and web api are seamlessly integrated, and are themselves just clojure functions. Dataworks ships with [[https://opencrux.com/][openCRUX]] for its database, meaning that your dataworks node is also a node of your database, and your database is always close at hand.
 4) Configuration is as simple as pointing your dataworks instance to a kafka broker.
 *** For clojure hackers
 If you're a clojure hacker, then you're familiar with the existing way of creating and running clojure programs:
@@ -88,7 +88,7 @@ Dataworks... doesn't really follow that model. As we all know, "code is data", s
 1) Instances do not have to be redeployed when code changes. Because instances are kept synchronized with the database as the application runs, number of deployments is minimalized, and operations complexity reduced.
 2) Your code can be queried. (we're working on this, give it time)
 3) Instead of working at the level of the file or namespace, you're really working at the level of the function. So far as the application is concerned, what is changing, all that is really changing, are functions. You're no longer managing services, or jar files. You're managing functions.
-4) You can easily make dataworks do things that you wouldn't expect, because in dataworks you can do anything. It's just a way of storing and deploying functions, with some handy utils built in. You might even say "It's just a library."
+4) You can easily make dataworks do things that you wouldn't expect, because in dataworks you can do anything. It's just a way of storing and deploying functions, with some handy utils built in. You might even say "It's just a library," although it really is more on the framework side of things.
 5) Dependencies are handled on the level of the function, not the namespace. (and even that is a work in progress)
 6) You no longer have to worry about circular dependencies, because they're allowed.
 7) You no longer have to wait for `lein uberjar` to create a build.
