--- a/ReadMe.org
+++ b/ReadMe.org
@@ -3,7 +3,7 @@
 ** Introduction
 Dataworks is a distributed stored function engine with REST API and stream processing capabilities built on top of a bitemporal, graph-query enabled document-store.
 ** Some Examples
-Using the utils in the dataworks.dev.utils namespace, we can define a new endpoint on a running dataworks cluster
+Using the utils in the dataworks.dev.utils namespace, we can define a new endpoint (or collector as we call it) on a running dataworks cluster
 #+BEGIN_SRC clojure
 (def-collector :hello-world
   "hello-world"
