--- a/ReadMe.org
+++ b/ReadMe.org
@@ -70,7 +70,7 @@ Easy as pi!
 
 ** Technical Case
 *** What does it do? And what is it good for?
-1) Dataworks is an easy and powerful way to build and deploy REST API's (and by extension, CRUD apps)
+1) Dataworks is an easy and powerful way to build and deploy REST API's
 2) Dataworks is an easy and powerful way to build and deploy stream processors
 3) Dataworks stores your code in a database, and synchronizes with your code/database as it changes. The code is evaluated at runtime, and on change. This includes API endpoints and routing. Changes are propagated to all instances automatically.
 *** There are plenty of other easy and powerful ways to do those things. What makes this different?
