--- a/ReadMe.org
+++ b/ReadMe.org
@@ -1,7 +1,7 @@
 * Dataworks
 
 ** Introduction
-Dataworks is a distributed stored function engine with REST API and stream processing capabilities built on top of a bitemporal, graph-query enabled document-store.
+Dataworks is a distributed-by-default stored-function engine with REST API and stream processing capabilities built on top of a bitemporal, graph-query enabled document-store.
 ** Some Examples
 Using the utils in the dataworks.dev.utils namespace, we can define a new endpoint (or collector as we call it) on a running dataworks cluster
 #+BEGIN_SRC clojure
